--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.711929761707-tb9u09u0oj7cvkqr0fp9s37llfpodh7f</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD8AjLZYqLfGkEAk4HUN1uIRH2h_WsP0tM</string>
+	<string>APIKeyHere</string>
 	<key>GCM_SENDER_ID</key>
 	<string>711929761707</string>
 	<key>PLIST_VERSION</key>
